[package]
name = "rust_lib_waiter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0"
chrono = "0.4.39"
flutter_rust_bridge = "=2.7.0"
glob = "0.3.1"
image = "0.25.5"
itertools = "0.12.1"
log = "0.4.14"
strum = "0.26.3"
strum_macros = "0.26.4"
sysinfo = "0.29.0"
sysproxy = "0.3.0"
widestring = "1.1.0"
winapi = { version = "0.3.9", features = ["processthreadsapi", "libloaderapi", "winuser", "wingdi", "fileapi", "synchapi", "winbase"] }

[dependencies.windows]
version = "0.58.0"
features = ["Data_Xml_Dom", "Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_Graphics", "Win32_Graphics_Gdi", "Win32_UI_Shell"]
